[metadata]
name = dmd_perturbation_detection
description = None
author = "Saverio Taliani"
author_email = s.taliani99@gmail.com
version = 0.0.1

keywords =
    robotics
    dmd

[options]
packages = find:
package_dir =
        = src
python_requires = >=3.8
install_requires =
        wheel
        numpy
        sympy
        matplotlib
        scikit-learn

[options.packages.find]
where = src

[tool:pytest]
addopts = --capture=no --verbose